<resources>
    <string name="app_name">Tap2Lock</string>
    <string name="accessibility_service_description">Allows you to lock the screen by double-tapping anywhere</string>
    <string name="accesibility_service_property">Screen lock via double tap</string>
    <string name="tile_label">Tap2Lock</string>
    <string name="alertdialog_title">Required permission</string>
    <string name="alertdialog_message">To enable double tap gesture management, please grant accessibility permissions</string>
    <string name="alertdialog_positive_button">Go to settings</string>
    <string name="alertdialog_negative_button">Cancel</string>

    <string name="settings_name">Tap2Lock Settings</string>
    <string name="settings_permissions_granted_title">Permissions granted</string>
    <string name="settings_permissions_granted_summary">The accessibility service is enabled.</string>
    <string name="settings_permissions_not_granted_title">Permissions required</string>
    <string name="settings_permissions_not_granted_summary">The accessibility service is disabled.\nTap here to grant the required permissions and enable double tap feature</string>

    <string name="settings_category_gestures">Gesture settings</string>
    <string name="settings_doubletap_interval_title">Double tap sensitivity</string>
    <string name="settings_doubletap_interval_summary">Recommended value: 200ms\nCurrent value: %d ms</string>

    <string name="settings_category_app_filter">App filter</string>
    <string name="settings_app_filter_title">Allowed applications</string>
    <string name="settings_app_filter_summary">Select which Launchers or apps can lock the screen using the double tap feature</string>
    <string name="settings_app_filter_dialog_title">Selected applications</string>
    <string name="settings_lockscreen_filter_title">Lock screen</string>
    <string name="settings_lockscreen_filter_summary">Enable double tap feature on lock screen</string>

    <string name="settings_category_about">About</string>
    <string name="settings_app_version_title">App version</string>
    <string name="settings_version_not_available">Cannot retrieve app version</string>
    <string name="settings_app_source_code_title">Source code on GitHub</string>
    <string name="settings_app_source_code_summary">Access the repository and contribute!</string>

</resources>